--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -545,13 +545,16 @@ i {
 }
 
 textarea {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   height: 20px;
   resize: none;
   border: none;
   font-size: 1.2rem;
+}
+
+textarea::-moz-placeholder {
+  color: gray;
+  font-family: "Open Sans", sans-serif;
 }
 
 textarea::placeholder {
@@ -608,6 +611,7 @@ hr {
   align-items: center;
   overflow-x: hidden;
   min-height: 100vh;
+  max-height: -moz-min-content;
   max-height: min-content;
   min-width: 200px;
   margin-top: 1rem;
@@ -682,7 +686,6 @@ hr {
 .side-nav__content--list__item:focus {
   -webkit-tap-highlight-color: transparent;
   outline: none;
-  -ms-touch-action: manipulation;
   touch-action: manipulation;
 }
 .side-nav__content--list__item.create-item {
@@ -829,7 +832,7 @@ hr {
 }
 .navbar .navbar-top .navbar__main .navbar__main--menu .field-container .input-container .skyz-name {
   padding-left: 1.5rem;
-  color: #DFAC4A;
+  color: #dfac4a;
   font-weight: 700;
   font-size: 14px;
 }
@@ -942,6 +945,45 @@ hr {
 .navbar .navbar-bottom .create-container .group-container-create .group .group-fields.blue .edit-field:hover .value-text {
   color: var(--color-on-primary);
 }
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .group-item-topic {
+  cursor: pointer;
+  width: 100px;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .group-item-topic:hover {
+  text-decoration: underline;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .show-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #c9e6ff;
+  border-radius: 4px;
+  min-width: 45px;
+  width: 45px;
+  height: 19px;
+  padding: 0 1rem;
+  cursor: pointer;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .hover-text {
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .show-box:hover .hover-text {
+  visibility: visible;
+  opacity: 1;
+}
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .edit-content .edit-field {
+  border: 1px solid var(--color-blue);
+}
+.navbar .navbar-bottom .create-container .group-container-create .group-fields .edit-content .edit-field:hover {
+  background-color: var(--color-blue);
+}
 .navbar .navbar-bottom .create-container .group-container-create .group.green .group-name {
   color: #36562c;
 }
@@ -953,12 +995,6 @@ hr {
 }
 .navbar .navbar-bottom .create-container .group-container-create .group.blue .group-name {
   color: var(--color-primary);
-}
-.navbar .navbar-bottom .create-container .group-container-create .group.blue .group-fields .edit-content .edit-field {
-  border: 1px solid var(--color-blue);
-}
-.navbar .navbar-bottom .create-container .group-container-create .group.blue .group-fields .edit-content .edit-field:hover {
-  background-color: var(--color-blue);
 }
 .navbar .navbar-bottom .create-container .group-container-create .group.purple .group-name {
   color: #3b4aa1;
@@ -990,6 +1026,23 @@ hr {
   gap: 1rem;
   align-items: center;
 }
+.navbar .create-show {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  gap: 1rem;
+  margin-bottom: 1.5rem;
+  background-color: var(--color-on-primary);
+  padding: 0.8rem;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  margin-top: 5rem;
+  top: 0;
+}
+.navbar input[type=text].search-input::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.25rem;
+}
 .navbar input[type=text].search-input::placeholder {
   opacity: 0.5;
   font-size: 1.25rem;
@@ -1007,6 +1060,7 @@ hr {
   }
   .navbar .navbar-top .navbar__main .navbar__main--search,
   .navbar .navbar-top .navbar__main .navbar__main--create {
+    width: -moz-min-content;
     width: min-content;
   }
 }
@@ -1028,7 +1082,8 @@ hr {
 }
 .round-img-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -1069,6 +1124,8 @@ hr {
   padding: 0 0.4rem;
   border-radius: 8px;
   font-size: 12px;
+  min-width: -moz-max-content;
+  min-width: max-content;
 }
 .icons-container-create .create-category .create-icon {
   font-size: 17px !important;
@@ -1087,6 +1144,7 @@ hr {
 
 .navbar__create {
   background-color: var(--color-permanent-bg);
+  width: -moz-max-content;
   width: max-content;
   display: flex;
   gap: 0.5rem;
@@ -1110,6 +1168,7 @@ hr {
 }
 
 .search-width {
+  width: -moz-fit-content;
   width: fit-content;
   background-color: red;
 }
@@ -1118,14 +1177,14 @@ hr {
   background-color: var(--color-on-primary);
 }
 .field-container .input-container.yellow {
-  border: 1px solid #DFAC4A;
+  border: 1px solid #dfac4a;
   position: relative;
 }
 .field-container .input-container.purple {
-  border: 1px solid #6F45A1;
+  border: 1px solid #6f45a1;
 }
 .field-container .input-container.green {
-  border: 1px solid #3A700B;
+  border: 1px solid #3a700b;
 }
 .field-container .input-container.blue {
   border: 1px solid var(--color-primary);
@@ -1475,6 +1534,7 @@ tr > td:first-child {
 }
 .card-container .card {
   background-color: var(--color-bg);
+  max-height: -moz-min-content;
   max-height: min-content;
   padding: 1rem;
   max-width: 100%;
@@ -1612,6 +1672,7 @@ tr > td:first-child {
   justify-content: space-around;
   align-items: center;
   gap: 1rem;
+  width: -moz-fit-content;
   width: fit-content;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
@@ -1640,6 +1701,7 @@ tr > td:first-child {
   top: 100%;
   left: 0;
   width: 100%;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 100px;
   background-color: var(--color-on-primary);
@@ -1819,9 +1881,19 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+input::-moz-placeholder {
+  color: var(--color-permanent-on-primary-light);
+  font-size: 1.25rem;
+}
+
 input::placeholder {
   color: var(--color-permanent-on-primary-light);
   font-size: 1.25rem;
+}
+
+input[type=number]::-moz-placeholder, input[type=text]::-moz-placeholder {
+  opacity: 0.5;
+  font-family: "Open Sans", sans-serif;
 }
 
 input[type=number]::placeholder,
@@ -1844,6 +1916,11 @@ input[type=text].edit-name {
 input[type=text].edit-name:hover,
 input[type=text].edit-name:focus-within {
   border: 1px solid var(--color-primary);
+}
+
+input[type=text].edit-name::-moz-placeholder {
+  opacity: 0.5;
+  font-size: 1.8rem;
 }
 
 input[type=text].edit-name::placeholder {
@@ -2049,6 +2126,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.6rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   border: 1.5px solid var(--color-light-gray);
@@ -2089,6 +2167,7 @@ textarea {
   font-size: 1.2rem;
   gap: 5px;
   border-radius: 8px;
+  width: -moz-fit-content;
   width: fit-content;
   height: 30px;
   background-color: var(--color-primary-95);
@@ -2398,6 +2477,7 @@ textarea {
   gap: 0.5rem;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2415,6 +2495,7 @@ textarea {
   gap: 5px;
   padding: 0.4rem 0.8rem;
   border-radius: 0.5rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   height: 47px;
@@ -2540,6 +2621,7 @@ textarea {
   gap: 0.2rem;
   padding: 0 10px;
   border-radius: 2.2rem;
+  width: -moz-fit-content;
   width: fit-content;
   min-width: 50px;
   display: flex;
@@ -3100,6 +3182,7 @@ textarea {
   display: flex;
   flex-direction: column;
   border-radius: 0.5rem;
+  min-width: -moz-fit-content;
   min-width: fit-content;
 }
 
@@ -3187,6 +3270,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 1.4rem;
@@ -3236,6 +3320,7 @@ textarea {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: -moz-max-content;
   width: max-content;
   justify-content: center;
   border-radius: 0.5rem;
@@ -3349,6 +3434,7 @@ textarea {
   opacity: 0;
 }
 .card-header .top .right .header-fields .edit-content {
+  width: -moz-max-content;
   width: max-content;
   height: 35px;
 }
@@ -3500,6 +3586,7 @@ textarea {
   gap: 1rem;
   color: var(--color-on-primary-light);
   padding: 1rem 2rem;
+  width: -moz-max-content;
   width: max-content;
 }
 .calendar-menu .date-nav {
@@ -3902,6 +3989,7 @@ textarea {
   justify-content: start;
   flex-direction: column-reverse;
   min-height: 120px;
+  height: -moz-min-content;
   height: min-content;
   width: 50px;
   align-items: center;
@@ -4165,7 +4253,8 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   cursor: pointer;
 }
 
@@ -4394,7 +4483,8 @@ textarea {
 }
 .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
@@ -4445,7 +4535,8 @@ textarea {
 
 img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .chat-list .chat-box .chat-details .text-message b {
@@ -4623,7 +4714,8 @@ img {
 }
 .message-container .chat-icon-container img {
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
   display: block;
 }
