--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -10,8 +10,8 @@
   padding-bottom: 1rem;
   font-size: font-size(font-size-regular);
   z-index: 100;
-  // border: 1px solid var(--color-light-gray);
-  box-shadow: 5px 5px 5px rgba(207, 207, 207, 0.466);
+  border: 1px solid var(--color-light-gray);
+  // box-shadow: 5px 5px 5px rgba(207, 207, 207, 0.466);
 
   .navbar-top {
     display: flex;
