--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -786,7 +786,7 @@ hr {
   padding-bottom: 1rem;
   font-size: 1.25rem;
   z-index: 100;
-  box-shadow: 5px 5px 5px rgba(207, 207, 207, 0.466);
+  border: 1px solid var(--color-light-gray);
 }
 .navbar .navbar-top {
   display: flex;
