--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -950,9 +950,6 @@ hr {
   cursor: pointer;
   width: 120px;
 }
-.navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .group-item-topic:hover {
-  text-decoration: underline;
-}
 .navbar .navbar-bottom .create-container .group-container-create .group-fields .group-item .show-box {
   display: flex;
   align-items: center;
@@ -1202,10 +1199,13 @@ hr {
 .search-width {
   width: -moz-fit-content;
   width: fit-content;
-  background-color: red;
 }
 
 .field-container .input-container {
+  background-color: var(--color-on-primary);
+  background-color: #f9f9f9;
+}
+.field-container .input-container:hover {
   background-color: var(--color-on-primary);
 }
 .field-container .input-container.yellow {
@@ -1217,12 +1217,16 @@ hr {
 }
 .field-container .input-container.green {
   border: 1px solid #3a700b;
+  border: 1px solid rgba(58, 112, 11, 0.6509803922);
 }
 .field-container .input-container.green input::-moz-placeholder {
   color: #295008;
 }
 .field-container .input-container.green input::placeholder {
   color: #295008;
+}
+.field-container .input-container.green:hover {
+  border: 1px solid #3a700b;
 }
 .field-container .input-container.blue {
   border: 1px solid var(--color-primary);
