--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1032,7 +1032,7 @@ hr {
   gap: 1rem;
   margin: 6rem 0 1.5rem 0;
   background-color: var(--color-on-primary);
-  padding: 0.8rem;
+  padding: 1.2rem 1.4rem;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   top: 0;
   left: 50%;
