--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -191,12 +191,14 @@
             display: flex;
             align-items: center;
             gap: 1rem;
+            cursor: pointer;
             .group-item-topic {
               width: 120px;
             }
-            // .group-item-topic:hover {
-            //   text-decoration: underline;
-            // }
+            .group-item-topic:hover {
+              text-decoration: underline;
+           
+            }
             .show-box {
               display: flex;
               align-items: center;
@@ -208,12 +210,12 @@
               height: 19px;
               padding: 0 1rem;
               cursor: pointer;
-              color: #88bbe7;
+              color: #b5d9f9;
               transition: opacity 0.3s ease;
             }
             .hover-text {
-              visibility: hidden;
-              opacity: 0;
+              // visibility: hidden;
+              // opacity: 0;
               transition: opacity 0.3s ease;
             }
 
