--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -195,10 +195,10 @@
             .group-item-topic {
               width: 120px;
             }
-            .group-item-topic:hover {
-              text-decoration: underline;
+            // .group-item-topic:hover {
+            //   text-decoration: underline;
            
-            }
+            // }
             .show-box {
               display: flex;
               align-items: center;
