--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -197,7 +197,7 @@
             }
             // .group-item-topic:hover {
             //   text-decoration: underline;
-           
+
             // }
             .show-box {
               display: flex;
@@ -207,11 +207,15 @@
               border-radius: 4px;
               min-width: 45px;
               width: 45px;
-              height: 19px;
+              height: 21px;
               padding: 0 1rem;
               cursor: pointer;
               color: #b5d9f9;
               transition: opacity 0.3s ease;
+            }
+            .show-box.big {
+              width: 90px;
+              padding: 0 0.5rem;
             }
             .hover-text {
               // visibility: hidden;
