--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -810,6 +810,7 @@ hr {
 .navbar .navbar-top .navbar__main {
   display: flex;
   gap: 1rem;
+  overflow-x: auto;
 }
 .navbar .navbar-top .navbar__main .navbar__main--search,
 .navbar .navbar-top .navbar__main .navbar__main--create {
@@ -1685,7 +1686,7 @@ tr > td:first-child {
   .card-container .card {
     padding: 1rem 1rem;
     border-radius: 0rem;
-    padding-top: 8rem;
+    padding-top: 2rem;
   }
   .card-container .card__boxes {
     grid-template-columns: repeat(1, 1fr);
