--- a/up/css/main-style.css
+++ b/up/css/main-style.css
@@ -1108,12 +1108,15 @@ hr {
     flex-wrap: wrap;
   }
 }
-@media screen and (max-width: 325px) {
+@media screen and (max-width: 350px) {
   .navbar .menu {
     width: 95%;
   }
   .navbar .navbar__main > *:not(:first-child) {
     margin-right: -20px;
+  }
+  .navbar .navbar-top {
+    align-self: end;
   }
 }
 
